# 2025-1A-T01-G05-PUBLICO

./: Quantization Strategies for Low-Resource Hardware in Deep Learning Applications.docx  README.md
article/: caio_article.tex  kikuchi_article.tex  kikuchi_ref.bib
article/computer_vision/: .gitkeep
src/computer_vision/: Dockerfile  kinect_initializer.py  kinect_v1.yaml
src/computer_vision/assets/logs/: 11112025-lab-rasp.txt  jetson_log.txt  kinect_pc_lab11112025_log.txt  log_lab_mapping21102025.txt  log_lab_mapping28102025_rasp.txt
src/computer_vision/kinect_publisher_ws/install/: local_setup.sh  setup.sh
src/computer_vision/kinect_publisher_ws/log/: latest_build
src/computer_vision/kinect_publisher_ws/src/kinect_camera/: setup.py
src/computer_vision/kinect_publisher_ws/src/performance_monitor/: package.xml  setup.py
src/computer_vision/kinect_publisher_ws/src/performance_monitor/performance_monitor/: performance_monitor_node.py
src/computer_vision/kinect_ws/kinect_camera/: setup.py
src/quantization/: README.md  requirements.txt
src/quantization/analysis/: comparison_analysis.py  predictions_analysis.py  resources_analysis.py  shared.py
src/quantization/benchmark/: dynamic_int8_quant_benchmark.py  model_benchmark_on_video.py  original_fp32_benchmark.py  shared.py  static_int8_quant_benchmark.py
src/quantization/notebooks/: dynamic_quantization.ipynb  static_quantization.ipynb  training.ipynb
src/quantization/notebooks/models/: dynamic_int8_quant.onnx  static_int8_quant.onnx
src/robot/: README.md  display_video.py
(+22 files in other folders)
